[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Utility/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Utility/PlayerCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Utility/Radio.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/glitch.tres" type="Shader" id=5]
[ext_resource path="res://Resources/sanity.tres" type="Shader" id=6]
[ext_resource path="res://Resources/blur_shader.tres" type="Shader" id=7]
[ext_resource path="res://Resources/noise.tres" type="Shader" id=8]
[ext_resource path="res://Audio/Game Music/intrusive.wav" type="AudioStream" id=9]
[ext_resource path="res://Scenes/Utility/MenuScreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://Audio/Game Music/ending_fire.wav" type="AudioStream" id=11]
[ext_resource path="res://Audio/Game Music/ending.wav" type="AudioStream" id=12]
[ext_resource path="res://Audio/Game Music/sound-ambience-sonido-ambiente-23-14211.mp3" type="AudioStream" id=13]
[ext_resource path="res://Assets/Background/NIGHTSHIFT_title_unlit.png" type="Texture" id=14]
[ext_resource path="res://Assets/Background/NIGHTSHIFT_title_lit.png" type="Texture" id=15]
[ext_resource path="res://Assets/Background/NIGHTSHIFT_title_cg.png" type="Texture" id=16]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 7 )
shader_param/blur_amount = 1.261

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )
shader_param/shake_power = 0.03
shader_param/shake_rate = 0.2
shader_param/shake_speed = 5.0
shader_param/shake_block_size = 30.5
shader_param/shake_color_rate = 0.01

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 8 )
shader_param/seed = 10.245
shader_param/power = 0.017
shader_param/speed = 99.689

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 6 )
shader_param/vignette_intensity = 2.0
shader_param/vignette_opacity = 0.715
shader_param/vignette_rgb = Color( 1, 0.0196078, 0.27451, 1 )

[sub_resource type="Animation" id=5]
resource_name = "FlickerOn"
length = 7.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/off:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/on:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.04, 1.15, 1.18, 1.23, 1.28, 1.32 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/gamecomp:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.07 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer2/MenuScreen:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 6.92 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer/off:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 5, 6.48 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.4, 0.4 ), Vector2( 0.3, 0.3 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimationPlayer/on:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 4.98, 6.48 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.4, 0.4 ), Vector2( 0.3, 0.3 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AnimationPlayer/gamecomp:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 4.98, 6.48 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.4, 0.4 ), Vector2( 0.3, 0.3 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("AnimationPlayer/off:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 5.01, 6.48 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 505, 275 ), Vector2( 505, 275 ), Vector2( 505, 235 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("AnimationPlayer/on:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 5.01, 6.48 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 505, 275 ), Vector2( 505, 275 ), Vector2( 505, 235 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("AnimationPlayer/gamecomp:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 5.01, 6.49 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 505, 275 ), Vector2( 505, 275 ), Vector2( 505, 235 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/off:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/on:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/gamecomp:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer2/MenuScreen:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer/off:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimationPlayer/on:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AnimationPlayer/gamecomp:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("AnimationPlayer/off:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 505, 275 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("AnimationPlayer/on:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 505, 275 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("AnimationPlayer/gamecomp:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 505, 275 ) ]
}

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="SanityTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Background" parent="." instance=ExtResource( 2 )]
margin_right = 1088.0
margin_bottom = 744.0

[node name="Sprite" parent="Background" index="0"]
position = Vector2( 1565.71, 1100 )

[node name="GameCamera" parent="." instance=ExtResource( 3 )]

[node name="Radio" parent="." instance=ExtResource( 4 )]
position = Vector2( 540, 360 )

[node name="GameMusicManager" type="Node2D" parent="."]
position = Vector2( 540, 360 )

[node name="IntrusiveMusic" type="AudioStreamPlayer2D" parent="GameMusicManager"]
stream = ExtResource( 9 )
volume_db = -5.0
bus = "GameMusic"

[node name="EndingMusicFire" type="AudioStreamPlayer2D" parent="GameMusicManager"]
stream = ExtResource( 11 )
volume_db = -8.0
bus = "GameMusic"

[node name="EndingMusic" type="AudioStreamPlayer2D" parent="GameMusicManager"]
stream = ExtResource( 12 )
volume_db = -8.0
bus = "GameMusic"

[node name="GameAmbientMusic" type="AudioStreamPlayer2D" parent="GameMusicManager"]
stream = ExtResource( 13 )
volume_db = -13.748
bus = "GameMusic"

[node name="Shaders" type="CanvasLayer" parent="."]

[node name="BlurShader" type="ColorRect" parent="Shaders"]
visible = false
material = SubResource( 1 )
margin_left = -172.0
margin_top = -127.0
margin_right = 1252.0
margin_bottom = 839.0

[node name="GlitchShader" type="ColorRect" parent="Shaders"]
visible = false
material = SubResource( 2 )
margin_left = -172.0
margin_top = -127.0
margin_right = 1252.0
margin_bottom = 839.0

[node name="ScreenNoiseShader" type="ColorRect" parent="Shaders"]
visible = false
material = SubResource( 4 )
margin_left = -172.0
margin_top = -127.0
margin_right = 1252.0
margin_bottom = 839.0

[node name="SanityShader" type="ColorRect" parent="Shaders"]
visible = false
material = SubResource( 3 )
margin_left = -172.0
margin_top = -127.0
margin_right = 1252.0
margin_bottom = 839.0

[node name="MenuCamera" type="Camera2D" parent="."]
offset = Vector2( 540, 360 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="MenuScreen" parent="CanvasLayer2" instance=ExtResource( 10 )]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FlickerOn = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="off" type="Sprite" parent="AnimationPlayer"]
visible = false
position = Vector2( 505, 275 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 14 )

[node name="on" type="Sprite" parent="AnimationPlayer"]
visible = false
position = Vector2( 505, 275 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 15 )

[node name="gamecomp" type="Sprite" parent="AnimationPlayer"]
visible = false
position = Vector2( 505, 275 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 16 )

[connection signal="timeout" from="SanityTimer" to="." method="_on_SanityTimer_timeout"]

[editable path="Background"]
